tests/rascal/negative/type_errors/L1/12_expression_ES10_D4_9.ob
MODULE Test12;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := ((+ ((+ 1223) - (x - x))) * (+ ((y + 0) DIV (1 + x))));
  (* error *)  q := (((+ (q DIV 1)) < ((- 0) DIV (1 MOD 200))) & (~ ((- x) <= (- 2))));
               y := (((+ (z DIV 1)) MOD ((200 * z) MOD (- 1))) - (((1223 * 2) MOD (1 MOD 1)) - (- (2 - 2))));
               z := ((- ((200 DIV 1) - (1 MOD 1))) DIV (((- 1) - (+ 1223)) - (+ (1223 MOD 2))));
               r := ((((z + 1) * (z - 0)) - ((1 + 0) DIV (+ x))) # (((+ 0) * (0 * 0)) * ((y * 200) + (0 DIV x))));
               x := ((((x - 1223) MOD (- y)) DIV (+ (+ 0))) * (((1 + x) DIV (1 * 0)) MOD ((200 DIV x) + (200 + x))));
               q := ((- (- (- x))) >= (((1223 - x) + (+ 2)) * ((- 1) - (+ 1223))));
               x := ((- (- (x MOD 200))) - (((- 0) MOD (1 * x)) - ((+ 200) MOD (200 - 1))));
               z := (((- (200 * y)) + (+ (200 * z))) + (((- y) MOD (- z)) DIV ((- 0) - (0 * 2))));
               x := (((+ (x + 1223)) - ((+ y) DIV (y DIV x))) * (((1223 MOD 2) - (0 + z)) + (+ (+ 1223))))
END Test12.